fixing some theme colors and introduced new variable brand-contrast used currently only for button text color

--- a/plugins/CorePluginsAdmin/stylesheets/marketplace.less
+++ b/plugins/CorePluginsAdmin/stylesheets/marketplace.less
@@ -39,7 +39,7 @@
   }
 
   a {
-    color: #255792;
+    color: @theme-color-link;
     text-decoration: none;
   }
 
