--- a/plugins/Morpheus/stylesheets/general/_forms.less
+++ b/plugins/Morpheus/stylesheets/general/_forms.less
@@ -14,11 +14,11 @@ button[type="button"],
 .submit {
     .border-radius(3px) !important;
     background: none !important;
-    background-color: #d3291f !important;
+    background-color: @theme-color-brand !important;
     .box-shadow(~"0 1px 1px rgba(13,13,13,.3), inset 0 -1px 0 rgba(13,13,13,.1)");
     #gradient > .vertical(rgba(255,255,255,.15), rgba(255,255,255,0)) !important;
     .font-default(12px, 16px) !important;
-    color: #fff !important;;
+    color: @theme-color-brand-contrast !important;;
     font-weight: normal;
     padding: 5px 15px !important;
     text-align: center;
