--- a/plugins/Zeitgeist/stylesheets/less/_variables.less
+++ b/plugins/Zeitgeist/stylesheets/less/_variables.less
@@ -2,6 +2,7 @@
 // Theme colors
 // Variable pattern: @theme-color-<role>[-<modifier>]
 @theme-color-brand:                    @color-red-piwik;
+@theme-color-brand-contrast:           @color-white;
 @theme-color-text:                     @color-black-piwik;
 @theme-color-text-light:               #444;
 @theme-color-text-lighter:             @color-silver-l40;
